Add Spotless rule and update tests for AssertJ
- Added custom Spotless rule to block use of JUnit assertions
  (e.g. assertEquals, assertThrows, assertTrue, etc.)
- Enforced AssertJ as the standard assertion framework across all tests
- Updated existing test classes to use AssertJ equivalents:
  - Replaced assertThrows with assertThatThrownBy / catchThrowable
  - Replaced assertEquals and assertTrue/False with fluent AssertJ assertions
  - Removed remaining JUnit 5 assertion imports
- Ensured spotlessCheck passes and CI formatting rules remain consistent